Quick fix in SampleDAta file.